--- a/04company/d/css/style2.css
+++ b/04company/d/css/style2.css
@@ -115,6 +115,10 @@
     .gnb {
         display: none;
     }
+    .box{
+        display: flex;
+        flex-wrap: wrap;
+    }
     .visual h1 {
         font-size: 16px;
     }
