--- a/04company/css/style2.css
+++ b/04company/css/style2.css
@@ -143,20 +143,18 @@
 }
 .box>li:nth-child(3) .txt {
     text-align: center;
-    padding: 20px;
+    padding: 10px;
 }
 .box>li:nth-child(3) i {
     letter-spacing: 20px;
     color: #fff;
     font-size: 25px;
     font-weight: bold;
+    font-family: 'Oswald', sans-serif;
 }
 .box>li:nth-child(3) img {
-    width: 50px;
+    width: 100px;
     margin: 0 auto;
-    top: 50%;
-    transform: translateY(50%);
-    margin-bottom: 30px;
 }
 .box>li:nth-child(4){
     position: relative;
@@ -260,9 +258,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 500px;
+    height: 400px;
     position: relative;
-    margin-top: 20px;
+    margin: 20px 0;
 }
 .fcSpon h2 {
     color: #fff;
@@ -287,9 +285,35 @@
 }
 .fcSpon .sponImg {
     display: flex;
+    padding-top: 50px;
+    justify-content: space-around;
 }
 .fcSpon .sponImg img {
     padding: 6px 20px;
+}
+.feedContain {
+    display: flex;
+    width: 1200px;
+    margin: 0 auto;
+}
+.feedContain .feeds {
+    background: rgb(255, 0, 0);
+    padding: 10px;
+}
+.feedContain .feeds h3,
+.feedContain .feeds p {
+    color: #fff;
+    text-align: center;
+}
+.feedContain .feeds ul li {
+    float: left;
+    width: calc( 100% / 2);
+    color: #fff;
+    text-align: center;
+}
+.feedContain .insta li {
+    float: left;
+    width: calc( 1200px / 4 );
 }
 /* pc */
 @media screen and (min-width: 700px){
