--- a/04company/css/style2.css
+++ b/04company/css/style2.css
@@ -291,55 +291,7 @@
 .fcSpon .sponImg img {
     padding: 6px 20px;
 }
-.feedContain {
-    display: flex;
-    width: 1000px;
-    margin: 0 auto;
-}
-.feedContain .feeds {
-    background: rgb(255, 0, 0);
-    padding: 10px;
-}
-.feedContain .feeds h3,
-.feedContain .feeds p {
-    color: #fff;
-    text-align: center;
-}
-.feedContain .feeds ul li {
-    float: left;
-    width: calc( 100% / 2);
-    color: #fff;
-    text-align: center;
-}
-.feedContain .feeds ul li img {
-    margin: 0 auto;
-    padding: 20px 0;
-}
-.feedContain .insta li {
-    float: left;
-    width: calc( 1000px / 4 );
-}
-.feedContain .insta li:nth-child(1) {
-    position: relative;
-}
-.feedContain .insta li:nth-child(1) p {
-    font-size: 13px;
-    background: #000;
-    color: #fff;
-    padding: 10px 20px;
-    position: absolute;
-    bottom: 0;
-}
-.feedContain .insta li {
-    position: relative;
-}
-.feedContain .insta li p {
-    font-size: 13px;
-    color: #fff;
-    padding: 10px 20px;
-    position: absolute;
-    bottom: 0;
-}
+
 /* pc */
 @media screen and (min-width: 700px){
     .toggle {
@@ -365,6 +317,55 @@
     }
     .fcSpon {
         display: block;
+    }
+    .feedContain {
+        display: flex;
+        width: 1000px;
+        margin: 0 auto;
+    }
+    .feedContain .feeds {
+        background: rgb(255, 0, 0);
+        padding: 10px;
+    }
+    .feedContain .feeds h3,
+    .feedContain .feeds p {
+        color: #fff;
+        text-align: center;
+    }
+    .feedContain .feeds ul li {
+        float: left;
+        width: calc( 100% / 2);
+        color: #fff;
+        text-align: center;
+    }
+    .feedContain .feeds ul li img {
+        margin: 0 auto;
+        padding: 20px 0;
+    }
+    .feedContain .insta li {
+        float: left;
+        width: calc( 1000px / 4 );
+    }
+    .feedContain .insta li:nth-child(1) {
+        position: relative;
+    }
+    .feedContain .insta li:nth-child(1) p {
+        font-size: 13px;
+        background: #000;
+        color: #fff;
+        padding: 10px 20px;
+        position: absolute;
+        bottom: 0;
+    }
+    .feedContain .insta li {
+        position: relative;
+    }
+    .feedContain .insta li p {
+        font-size: 13px;
+        color: #fff;
+        padding: 10px 20px;
+        position: absolute;
+        bottom: 0;
     }
 }
 /* mobile */
@@ -417,5 +418,28 @@
     }
     .box>li:nth-child(5) h2 {
         font-size: 18px;
+    }
+    .feedContain .feeds {
+        width: 100%;
+        height: 200px;
+        background: rgb(128, 128, 128);
+        text-align: center;
+        color: #fff;
+    }
+    .feedContain .feeds li {
+        float: left;
+        text-align: center;
+        padding: 10px;
+    }
+    .feedContain .feeds li:last-child {
+        padding: 10px 0;
+    }
+    .feedContain .feeds li img {
+        width: 50px;
+        margin: 0 auto;
+        padding-top: 10px;
+    }
+    .feedContain .insta li {
+        float: left;
     }
 }
