--- a/04company/css/style2.css
+++ b/04company/css/style2.css
@@ -355,6 +355,10 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.article>ul>li:nth-child(2) img {
+    width: 20px;
+    margin: 0 auto;
+}
 .article>ul>li:nth-child(2)::after {
     content: "";
     display: block;
@@ -387,8 +391,60 @@
 .article>ul>li:nth-child(3){
     background: #000;
 }
+.article>ul>li:nth-child(3) h2:nth-child(1) {
+    color: rgb(255, 123, 0);
+    font-size: 16px;
+    text-align: center;
+}
+.article>ul>li:nth-child(3) h2:nth-child(2) {
+    color: #fff;
+    font-size: 16px;
+    text-align: center;
+    position: relative;
+}
+.article>ul>li:nth-child(3) h2:nth-child(2)::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 150px;
+    height: 0.4px;
+    background: rgb(255, 255, 255);
+    left: 50%;
+    top: 30px;
+    transform: translate(-50%, -50%);
+}
+.article>ul>li:nth-child(3) ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.article>ul>li:nth-child(3) li {
+    color: #fff;
+}
 .article>ul>li:nth-child(4){
     background: #000;
+}
+.article>ul>li:nth-child(4) h2:nth-child(1) {
+    color: rgb(255, 123, 0);
+    font-size: 16px;
+    text-align: center;
+}
+.article>ul>li:nth-child(4) h2:nth-child(2) {
+    color: #fff;
+    font-size: 16px;
+    text-align: center;
+}
+.article>ul>li:nth-child(4) table {
+    line-height: 18px;
+    padding: 5px;
+}
+.article>ul>li:nth-child(4) .txt {
+    color: #fff;
+    font-size: 10px;
+}
+.article>ul>li:nth-child(4) .num {
+    color: rgb(255, 123, 0);
+    font-size: 10px;
 }
 /* pc */
 @media screen and (min-width: 700px){
