--- a/04company/css/style2.css
+++ b/04company/css/style2.css
@@ -294,6 +294,7 @@
 .article {
     width: 1000px;
     margin: 0 auto;
+    margin-bottom: 10px;
 }
 .article>ul {
     display: flex;
@@ -461,6 +462,59 @@
     position: absolute;
     bottom: 0;
 }
+.noticeWrap {
+    background: #000;
+    width: 1000px;
+    margin: 0 auto;
+}
+.noticeWrap h3 {
+    color: #fff;
+    padding: 10px;
+}
+#footer {
+    width: 100%;
+    background: rgb(24, 24, 24);
+    height: 300px;
+}
+.topMenu {
+    margin-bottom: 10px;
+}
+.footmenu {
+    width: 1000px;
+    margin: 0 auto;
+}
+.footmenu li {
+    float: left;
+    padding: 5px 10px;
+}
+.footmenu li a {
+    color: #fff;
+}
+.topMenu::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: rgb(223, 223, 223);
+}
+.container {
+    width: 1000px;
+    margin: 0 auto;
+}
+.container ul {
+    display: flex;
+    justify-content: space-around;
+}
+.container img {
+    width: 80px;
+    margin-right: 10px;
+
+}
+.container li {
+    color: #fff;
+    font-size: 13px;
+    line-height: 30px;
+}
 /* pc */
 @media screen and (min-width: 700px){
     .toggle {
@@ -515,15 +569,6 @@
     .feedContain .insta li {
         float: left;
         width: calc( 1000px / 4 );
-    }
-    .noticeWrap {
-        background: #000;
-        width: 1000px;
-        margin: 0 auto;
-    }
-    .noticeWrap h3 {
-        color: #fff;
-        padding: 10px;
     }
 }
 /* mobile */
@@ -628,5 +673,14 @@
     .feedContain .insta li:nth-child(6){
         width: 50%;
         order: 6;
+    }
+    .noticeWrap {
+        display: none;
+    }
+    .article{
+       display: none;
+    }
+    .container img {
+        display: none;
     }
 }
