--- a/04company/css/style2.css
+++ b/04company/css/style2.css
@@ -583,9 +583,8 @@
         height: 100%;
         background: rgb(178, 197, 1);
         position: fixed;
-        top: 0;
+        top: 100%;
         left: -100%;
-        display: flex;
         justify-content: center;
         align-items: center;
     }
@@ -596,6 +595,7 @@
         float: none;
         text-align: center;
         color: #fff;
+        line-height: 40px;
     }
     .gnb .mainMenu {
         transform: translateY(-30px);
