--- a/04company/css/style2.css
+++ b/04company/css/style2.css
@@ -4,15 +4,18 @@
    height: 930px;
    position: relative;
 }
-.headerWrap {
-    width: 1200px;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    position: fixed;
-    background: #000;
-    z-index: 2;
+@media screen and (min-width: 701px){
+    .headerWrap {
+        width: 1200px;
+        top: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        position: fixed;
+        background: #000;
+        z-index: 2;
+    }
 }
+
 .toggle {
     width: 40px;
     height: 40px;
@@ -239,19 +242,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.sponser li>img {
-    width: 1200px;
-    height: 100px;
-    border-radius: 10px;
-}
-.sponser li span {
-    position: relative;
-}
-.sponser li span>img {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-}
+
 .fcSpon {
     background-image: url(../images/sponBG.png);
     background-position: center;
@@ -535,9 +526,25 @@
     .visualWrap h1 {
         font-size: 40px;
     }
+    .mainContain {
+        bottom: 50px;
+    }
     .sponser {
         width: 1200px;
         margin: 0 auto;      
+    }
+    .sponser li>img {
+        width: 1200px;
+        height: 100px;
+        border-radius: 10px;
+    }
+    .sponser li span {
+        position: relative;
+    }
+    .sponser li span>img {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
     }
     .fcSpon {
         display: block;
@@ -577,13 +584,14 @@
     .headerWrap {
         width: 100%;
         position: fixed;
+        z-index: 1;
+        background: #000;
     }
     .gnb {
         width: 100%;
         height: 100%;
         background: rgb(178, 197, 1);
         position: fixed;
-        top: 100%;
         left: -100%;
         justify-content: center;
         align-items: center;
@@ -593,12 +601,13 @@
     }
     .gnb a {
         float: none;
-        text-align: center;
         color: #fff;
         line-height: 40px;
+        text-align: center;
     }
     .gnb .mainMenu {
         transform: translateY(-30px);
+        text-align: center;
     }
     .box{
         display: flex;
@@ -609,6 +618,17 @@
     }
     .mainContain {
         width: 100%;
+    }
+    .sponser {
+        
+    }
+    .sponser li {
+        position: relative;
+    }
+    .sponser span {
+        position: absolute;
+        bottom: 0;
+        left: 0;
     }
     .box>li:nth-child(1){
         order: 1;
