--- a/04company/css/style2.css
+++ b/04company/css/style2.css
@@ -1,9 +1,6 @@
 @charset "UTF-8";
 /* 공통 */
-#header {
-   height: 930px;
-   position: relative;
-}
+
 @media screen and (min-width: 701px){
     .headerWrap {
         width: 1200px;
@@ -67,7 +64,7 @@
     width: 1200px;
     left: 50%;
     transform: translateX(-50%);
-    position: absolute;
+    position: relative;
     /* bottom: 0; */
 }
 .mainContain .box {
@@ -243,16 +240,7 @@
     transform: translate(-50%, -50%);
 }
 
-.fcSpon {
-    background-image: url(../images/sponBG.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 400px;
-    position: relative;
-    margin: 20px 0;
-}
+
 .fcSpon h2 {
     color: #fff;
     padding: 20px;
@@ -290,7 +278,7 @@
 .article>ul {
     display: flex;
 }
-.article li {
+.article>ul>li {
     width: calc( 100% / 4);
     height: 200px;
 }
@@ -311,6 +299,7 @@
     color: #fff;
     text-align: center;
     font-size: 10px;
+    top: 8px;
     position: relative;
     margin: 2px 0;
 }
@@ -327,6 +316,8 @@
 }
 .article>ul>li:nth-child(1) table {
     margin: 0 auto;
+    position: relative;
+    top: 10px;
 }
 .article>ul>li:nth-child(1) td {
     font-size: 10px;
@@ -399,11 +390,15 @@
     top: 30px;
     transform: translate(-50%, -50%);
 }
-.article>ul>li:nth-child(3) ul {
+.article>ul>li:nth-child(3) ul>li {
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 10px;
+}
+.article>ul>li:nth-child(3) ul>li img {
+    width: 30px;
+    padding-right: 5px;
 }
 .article>ul>li:nth-child(3) li {
     color: #fff;
@@ -466,7 +461,7 @@
 #footer {
     width: 100%;
     background: rgb(24, 24, 24);
-    height: 300px;
+    height: 200px;
 }
 .topMenu {
     margin-bottom: 10px;
@@ -493,18 +488,21 @@
     width: 1000px;
     margin: 0 auto;
 }
-.container ul {
-    display: flex;
-    justify-content: space-around;
+.container>ul>li {
+    position: relative;
+    float: left;
 }
 .container img {
     width: 80px;
     margin-right: 10px;
-
+    position: absolute;
+    left: 10px;
+    top: 50%;
 }
-.container li {
+.container li:last-child {
     color: #fff;
-    font-size: 13px;
+    font-size: 12px;
+    float: right;
     line-height: 30px;
 }
 /* pc */
@@ -547,7 +545,14 @@
         left: 50%;
     }
     .fcSpon {
-        display: block;
+        background-image: url(../images/sponBG.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 400px;
+        position: relative;
+        margin: 20px 0;
     }
     .feedContain {
         display: flex;
@@ -577,6 +582,9 @@
     .feedContain .insta li {
         float: left;
         width: calc( 1000px / 4 );
+    }
+    #footer .footmenu {
+        margin-left: 20px;
     }
 }
 /* mobile */
@@ -619,9 +627,6 @@
     .mainContain {
         width: 100%;
     }
-    .sponser {
-        
-    }
     .sponser li {
         position: relative;
     }
@@ -630,6 +635,7 @@
         bottom: 0;
         left: 0;
     }
+    
     .box>li:nth-child(1){
         order: 1;
         width: 50%;
@@ -723,6 +729,11 @@
     }
     .article{
        display: none;
+    }
+    #footer {
+        width: 100%;
+        background: rgb(24, 24, 24);
+        height: 200px;
     }
     #footer .container img {
         display: none;
