--- a/04company/css/style2.css
+++ b/04company/css/style2.css
@@ -731,7 +731,6 @@
        display: none;
     }
     #footer {
-        width: 100%;
         background: rgb(24, 24, 24);
         height: 200px;
     }
@@ -739,7 +738,8 @@
         display: none;
     }
     #footer .container p{
-        width: 700px;
-        margin: 0 auto;
+        transform: translateX(-50%);
+        font-size: 10px;
+        padding: 0 20px;
     }
 }
