--- a/04company/css/style2.css
+++ b/04company/css/style2.css
@@ -738,8 +738,7 @@
         display: none;
     }
     #footer .container p{
-        transform: translateX(-50%);
-        font-size: 10px;
-        padding: 0 20px;
+        font-size: 12px;
+        width: 100%
     }
 }
