--- a/04company/css/style2.css
+++ b/04company/css/style2.css
@@ -586,6 +586,19 @@
     #footer .footmenu {
         margin-left: 20px;
     }
+    .subBg {
+        background: url(../images/subbg.png) no-repeat center;
+        background-size: cover;
+        background-position: center;
+        height: 200px;
+    }
+    .subBg .txt {
+        text-align: center;
+        color: #fff;
+        position: relative;
+        top: 100px;
+    }
+    .subBg .txt h2 {margin-bottom: 10px;}
 }
 /* mobile */
 @media screen and (max-width: 699px) {
@@ -598,7 +611,7 @@
     .gnb {
         width: 100%;
         height: 100%;
-        background: rgb(178, 197, 1);
+        background: rgb(34, 34, 34);
         position: fixed;
         left: -100%;
         justify-content: center;
@@ -610,8 +623,10 @@
     .gnb a {
         float: none;
         color: #fff;
-        line-height: 40px;
+        line-height: 50px;
         text-align: center;
+        font-weight: bold;
+        font-size: 20px;
     }
     .gnb .mainMenu {
         transform: translateY(50px);
@@ -739,6 +754,19 @@
     }
     #footer .container p{
         font-size: 12px;
-        width: 100%
+        width: 100%;
     }
+    .subBg {
+        background: url(../images/subbg.png) no-repeat center;
+        background-size: cover;
+        background-position: center;
+        height: 200px;
+    }
+    .subBg .txt {
+        text-align: center;
+        color: #fff;
+        position: relative;
+        top: 100px;
+    }
+    .subBg .txt h2 {margin-bottom: 10px;}
 }
