--- a/06company1/css/style.css
+++ b/06company1/css/style.css
@@ -85,3 +85,5 @@
     background: url(../images/contact-cover.jpg) no-repeat center fixed;
     background-size: cover;
 }
+/* subcontent */
+.subcontent {position: relative;}
