--- a/04company/css/css_boot.css
+++ b/04company/css/css_boot.css
@@ -7,7 +7,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.content .main {float: left;} 
+.content .main {float: left;height: 230px;} 
 .content .main:nth-child(1){
     width: 25%;
     background: #000;
@@ -22,9 +22,11 @@
     width: 50%;
     background: #ccc;
 }
+.content .main:nth-child(2) ul {color: #fff; display: flex; justify-content: space-around;text-align: center;}
+
 .content .main:nth-child(3){
     width: 25%;
-    background: #000;
+    background: rgb(255, 147, 5);
 }
 .content .main:nth-child(4){
     width: 25%;
@@ -45,4 +47,7 @@
 .content .main:nth-child(8){
     width: 50%;
     background: #000;
+}
+@media screen and (min-width: 699px) {
+    .content .main:nth-child(1) {}
 }
